--- a/src/components/SignInButton/styles.module.scss
+++ b/src/components/SignInButton/styles.module.scss
@@ -11,8 +11,8 @@
   color: var(--pink-900);
   font-weight: bold;
   background: var(--beige-450);
-  box-shadow: -10px 10px 20px #b8b08b,
-  5px -5px 15px #ffffd1;
+  box-shadow: -1px 5px 4px #c6bf9c, 
+              4px 2px 20px #ffffe0;
 
   transition: filter  0.2s;
 
