--- a/src/pages/Menu/Card/styles.module.scss
+++ b/src/pages/Menu/Card/styles.module.scss
@@ -4,13 +4,15 @@
   margin: 2rem auto;
 
   border-radius: 5px;
-  background: linear-gradient(145deg, #dad2ab, #fff9cb);
-  box-shadow: -9px 9px 49px #bfb896,
-              9px -9px 49px #ffffe6;
+  background: linear-gradient(315deg, #dad2ab, #fff9cb);
+  box-shadow: 10px 15px 20px #bfb896, 
+              18px 20px 20px #ffffe6;
 
   img {
+    border-radius: 5px;
     margin: 1rem;
     width: 220px;
+    height: 250px;
   }
 
   .cakeContent {
@@ -33,9 +35,7 @@
 
     .cakeSize {
       p {
-        position: relative;
         margin-bottom: 10px;
-        z-index: 1; //* Provavelmente retirar
       }
 
       div{
@@ -62,8 +62,8 @@
       
         border-radius: 50%;
         background: linear-gradient(315deg, #fff9cb, #dad2ab);
-        box-shadow: -6px 6px 30px #c6bf9c,
-                    6px -6px 30px #ffffe0;
+        box-shadow: 7px 7px 8px #c6bf9c, 
+                    -3px -3px 20px #ffffe0;
         
         transition: background .5s;
         font-size: 20px;
@@ -71,7 +71,6 @@
         color: var(--brown-900);
         
         cursor: pointer;
-        z-index: 0; //* Provavelmente retirar
       }
     }
   }
@@ -79,6 +78,7 @@
   button {
     padding: 0.5rem 1rem;
     margin: 25% auto 5%;
+    height: 42px;
     
     font-weight: bold;
     font-size: 18px;
@@ -87,10 +87,10 @@
     background: var(--pink-900);
     color: var(--white);
 
-    transition: filter .5s;
+    transition: filter .3s;
 
     &:hover {
-      filter: brightness(0.9);
+      filter: brightness(0.8);
     }
   }
 }
