Primeira versão do website

--- a/src/pages/Bag/styles.module.scss
+++ b/src/pages/Bag/styles.module.scss
@@ -141,8 +141,12 @@
   }
 }
 
-.deliveryDate {
+.deliveryData {
   font-weight: 700;
+
+  span {
+    display: block;
+  }
 
   p {
     margin-top: 10px;
