--- a/src/pages/Bag/styles.module.scss
+++ b/src/pages/Bag/styles.module.scss
@@ -37,8 +37,8 @@
 
     span {
       display: inline-block;
-      min-width: 32px;
-      padding: 0 3px;
+      min-width: auto;
+      padding: 0 4px;
       border: 2px solid var(--brown-900);
       border-radius: 5px;
       text-align: center;
