--- a/src/pages/Home/styles.module.scss
+++ b/src/pages/Home/styles.module.scss
@@ -71,27 +71,32 @@
       right: 0;
       margin: 0 5px;
     }
-    
+
   }
 }
 
-@media screen and (max-width: 767px) {
+
+@media screen and (max-width: 830px) {
   .homeContainer {
     display: flex;
     flex-direction: column;
+    height: fit-content;
     
     .backgroundImg {
-      display: none;
-      width: 200px;
+      // display: none;
+      min-width: 200px;
       height: 295px;
     }
 
     .wppButton {
-      right: 10px;
+      right: 2px;
+      bottom: 15px;
       img {
-        width: 32px;
-        height: 32px;
+        width: 40px;
+        height: 40px;
       }
+
     }
   }
 }
+
