--- a/src/pages/Menu/Card/styles.module.scss
+++ b/src/pages/Menu/Card/styles.module.scss
@@ -10,9 +10,9 @@
 
   img {
     border-radius: 5px;
-    margin: 1rem;
-    width: auto;
-    height: 250px;
+    margin: 1rem auto;
+    width: 220px;
+    height: 256px;
   }
 
   .cakeContent {
