--- a/src/components/SignInButton/styles.module.scss
+++ b/src/components/SignInButton/styles.module.scss
@@ -62,7 +62,7 @@
 
 @media screen and (max-width: 830px) {
   .signOutButton {
-    width: 275px;
+    max-width: 275px;
     img {
       width: 38px;
     }
