--- a/src/pages/Bag/styles.module.scss
+++ b/src/pages/Bag/styles.module.scss
@@ -17,7 +17,7 @@
   justify-content: space-around;
 
   min-width: 360px;
-  height: 120px;
+  min-height: 120px;
   margin: 10px;
   border-radius: 5px;
 
@@ -31,7 +31,8 @@
     border-radius: 5px;
   }
 
-  div {
+  .orderInfoCotainer{
+    padding: 5px 0;
     h3 {
       text-transform: capitalize;
     }
